--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -23,7 +23,7 @@ on:
     branches: ["main"]
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'jjtstfilefunc'   # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_NAME: 'jjtstfff'   # set this to your function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '7ZipFileExtractor'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '8.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
